...
    }
    
     private func proceedToNextQuestionOrResults() {
        if self.isLastQuestion() {
            
            let viewModel = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: makeResultsMessage(),
                buttonText: "Сыграть ещё раз")
            viewController?.showResults(viewModel)
            
        } else {
            self.switchToNextQuestion()
...
